app/styles/cant_decide.scss
@import '_custom_vars';

.instructions {
  width: 100%;
  height: 100%;
  position: absolute;
  background: rgba(0,0,0,0.5);
  color: white;
  z-index: 3;
  display: none;
  padding:10px;

  .text {
    padding: 5px;
    margin: 20% 10%;
  }

  .dismiss-button {
    border: 1px solid white;
    padding: 5px;
    margin: 0% 30%;
    text-align: center;
    border-radius: $radius;
  }

}


#cant-decide-photo, #cant-decide-photo2 {

  position: relative;

  img {
    width: 100%;
    position: absolute;
  }

  z-index: 2;

}

#cant-decide-photo2 {
  z-index: 1;
}

